Create Type Room
